Get rid of the last of the deprecated classes?